# tree-sitter-cobol-kanji

./: Cargo.toml  README.md  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: test.yml
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cobol_kanji/: __init__.py  binding.c
src/: grammar.json  node-types.json
test/corpus/: kanji.txt
